# swagger.yaml
@@ -48,18 +48,6 @@ paths:
             type: array
             items:
               - $ref: '#/definitions/Record'
-    put:
-      summary: Create a new (possible the first) version of a record
-      operationId: app.put_record
-      produces:
-        - application/json;
-      security:
-        - oauth2: ['write']
-      responses:
-        200:
-          description: The created record with id and version updated
-          schema:
-            $ref: '#/definitions/Record'
 
   /record/{id}:
     get:
@@ -74,6 +62,24 @@ paths:
             $ref: '#/definitions/Record'
         404:
           description: Not found
+      parameters:
+        - name: id
+          in: path
+          description: Id of the record to get.
+          required: true
+          type: string
+    put:
+      summary: Create a new (possible the first) version of a record
+      operationId: app.put_record
+      produces:
+        - application/json;
+      security:
+        - oauth2: ['write']
+      responses:
+        200:
+          description: The created record with id and version updated
+          schema:
+            $ref: '#/definitions/Record'
       parameters:
         - name: id
           in: path
@@ -122,6 +128,42 @@ paths:
         - name: version
           in: path
           description: Version of the record to get.
+          required: true
+          type: string
+
+  /image/{id}:
+    get:
+      summary: Get specific image with id
+      operationId: app.get_image
+      produces:
+        - image/jpeg;
+      responses:
+        200:
+          description: Ok
+        404:
+          description: Not found
+      parameters:
+        - name: id
+          in: path
+          description: Id of image to get.
+          required: true
+          type: string
+    put:
+      summary: Create a new image with id
+      operationId: app.put_image
+      produces:
+        - image/jpeg;
+      security:
+        - oauth2: ['write']
+      responses:
+        200:
+          description: Ok
+        401:
+          description: The image already excists. We dont allow it to be overwritten.
+      parameters:
+        - name: id
+          in: path
+          description: Id of image to get.
           required: true
           type: string
 
